--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-intersection-observer": "^9.13.0",
     "react-redux": "^9.1.2",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
