--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18",
     "react-intersection-observer": "^9.13.0",
     "react-redux": "^9.1.2",
+    "react-tooltip": "^5.28.0",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
