--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-redux": "^9.1.2",
     "react-tooltip": "^5.28.0",
     "sonner": "^1.4.41",
+    "swiper": "^11.1.15",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
