--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@react-spring/three": "^9.7.5",
     "@react-spring/web": "^9.7.4",
     "@reduxjs/toolkit": "^2.2.7",
     "class-variance-authority": "^0.7.0",
