--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@react-spring/three": "^9.7.5",
     "@react-spring/web": "^9.7.4",
+    "@react-three/drei": "^9.121.4",
     "@reduxjs/toolkit": "^2.2.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
