--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "sonner": "^1.4.41",
     "swiper": "^11.1.15",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
